--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <link rel="stylesheet" href="js/js.js">
 </head>
 <body>
-    <head>
 
-    </head>
-    <body>
         <div class="wraper">
             <div class="calculator">
                 <h1>calculator</h1>
+                <div><input type="text">
+                    <select name="" id="">
+                        <option value="plus">+</option>
+                        <option value="substract">-</option>
+                        <option value="multiply">*</option>
+                        <option value="devide">/</option>
+                    </select>
+                </div>                
             </div>
         </div>
-    </body>
-    <footer></footer>
-    
 </body>
+<footer></footer>
+
 </html>
